--- a/client/package.json
+++ b/client/package.json
@@ -14,17 +14,17 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@radix-ui/react-dropdown-menu": "^1.0.0",
-    "@radix-ui/themes": "^1.1.2",
     "dotenv": "^16.4.7",
+    "framer-motion": "^12.4.7",
     "fullcalendar": "^6.1.8",
     "radix-ui": "^1.1.3",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.18",
+    "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
