--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,14 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.8",
+    "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
     "@radix-ui/react-dropdown-menu": "^1.0.0",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.4.7",
-    "fullcalendar": "^6.1.8",
     "radix-ui": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
