--- a/.github/workflows/main_hyv.yml
+++ b/.github/workflows/main_hyv.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy ASP.Net Core app to Azure Web App - hyv
 
 on:
@@ -21,19 +18,18 @@ jobs:
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '8.x'
+          dotnet-version: "8.x"
 
-      # Build in the Hyv/api subdirectory
+      # Build in the 'api' folder
       - name: Build with dotnet
         working-directory: api
         run: dotnet build --configuration Release
 
-      # Publish to a local folder for deployment
+      # Publish in the same 'api' folder
       - name: dotnet publish
-        working-directory: Hyv/api
+        working-directory: api
         run: dotnet publish -c Release -o "${{ env.DOTNET_ROOT }}/myapp"
 
-      # Upload the published folder as an artifact named ".net-app"
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
@@ -44,18 +40,18 @@ jobs:
     runs-on: windows-latest
     needs: build
     environment:
-      name: 'Production'
+      name: "Production"
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
       id-token: write # This is required for requesting the JWT
-      contents: read  # This is required for actions/checkout
+      contents: read # This is required for actions/checkout
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: .net-app
-      
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -63,11 +59,10 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_D2C7DDBBD8B948B0A9EEE612616E46B4 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_D1A37D5F73564739BF24DA795239A257 }}
 
-      # Deploy the published folder named ".net-app" to the Web App
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'hyv'
-          slot-name: 'Production'
+          app-name: "hyv"
+          slot-name: "Production"
           package: .net-app
