--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy ASP.NET Core App
+name: Build and Deploy ASP.Net Core App
 
 on:
   push:
@@ -16,27 +16,31 @@ jobs:
       - name: Set up .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '8.x'
+          dotnet-version: "8.x"
 
+      # Build the project from the 'api' folder
       - name: Build with dotnet
-        working-directory: Hyv/api
+        working-directory: api
         run: dotnet build --configuration Release
 
+      # Publish the application to a folder named 'publish' in the 'api' directory
       - name: Publish the application
-        working-directory: Hyv/api
-        run: dotnet publish -c Release -o ${{ env.DOTNET_ROOT }}/myapp
+        working-directory: api
+        run: dotnet publish -c Release -o publish
 
+      # Upload the published output as an artifact named 'dotnet-app'
       - name: Upload artifact for deployment
         uses: actions/upload-artifact@v4
         with:
           name: dotnet-app
-          path: ${{ env.DOTNET_ROOT }}/myapp
+          path: api/publish
 
   deploy:
     runs-on: windows-latest
     needs: build
     steps:
-      - name: Download artifact
+      # Download the published artifact
+      - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: dotnet-app
@@ -48,9 +52,10 @@ jobs:
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
+      # Deploy the artifact from the downloaded folder
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'hyv'
-          slot-name: 'Production'
-          package: .
+          app-name: "hyv"
+          slot-name: "Production"
+          package: ${{ github.workspace }}/api/publish
