--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,4 +58,4 @@ jobs:
         with:
           app-name: "hyv"
           slot-name: "Production"
-          package: ${{ github.workspace }}/api/publish
+          package: api/publish
